2009-09-20  Christopher Bratusek <zanghar@freenet.de>
	* lisp/sawfish/wm/ext/fdo-menu.jl: use define instead of defun
	                                   changed name of a few variables
					   make it more error tolerant regarding bad .desktop files
					   make it work if any lang-setting variable is unset
					   -- [Matthew Love]

	* man/faq.texi: updated

2009-09-19  Christopher Bratusek <zanghar@freenet.de>
	* lisp/sawfish/wm/commands/user.jl
	* lisp/sawfish/wm/workspace.jl: move display-workspace-name & helpers to workspace.jl

	* man/sawfish.texi
	* lisp/sawfish/wm/autoload.jl
	* lisp/sawfish/wm/commands/move-resize.jl: added move-window-center command

	* man/sawfish.texi: fixed a glitch

	* man/news.texi: updated
	                 added pxref to Input Focus

	* man/Makefile.in: add --no-validate flag for generating NEWS

	* lisp/sawfish/wm/ext/match-window: make `rename-window' also change (_NET_)WM_ICON_NAME

2009-09-15  Christopher Bratusek <zanghar@freenet.de>
	* lisp/sawfish/wm/util/prompt-extras.jl: fixed a newly introduced bug [Matthew Love]

	* man/sawfish.texi: added section to info file [Luis Rodrigo Gallardo Cruz]

	* scripts/Makefile.in: also expand REP_ENVIRON here [Luis Rodrigo Gallardo Cruz]

	* lisp/sawfish/wm/commands/move-resize.jl: change cursor to hand2 on move
	                                           change cursor to crosshair on resize

	* OPTIONS: small update

	* man/sawfish.1
	* man/sawfish-client.1
	* man/sawfish-ui.1: added man-page for sawfish 
	                 added man-page for sawfish-client
			 added man-page for sawfish-ui
			 -- [Debian]

	* man/Makefile.in: actually build FAQ
	                   removed sawfish.dvi target
			   removed sawfish.ps target

	* man/news.texi: updated

2009-09-14  Christopher Bratusek <zanghar@freenet.de>
	* lisp/sawfish/wm/ext/match-window.jl: string change in rename-window
	                                       improved keymap-trans