@@ -7,6 +7,8 @@
 
 	* man/faq.texi: updated
 
+	* lisp/sawfish/gtk/widget-text.jl: mark as broken
+
 2009-09-19  Christopher Bratusek <zanghar@freenet.de>
 	* lisp/sawfish/wm/commands/user.jl
 	* lisp/sawfish/wm/workspace.jl: move display-workspace-name & helpers to workspace.jl
